--- a/Heroes3Editor/Heroes3Editor.csproj
+++ b/Heroes3Editor/Heroes3Editor.csproj
@@ -20,6 +20,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="Lang\lang-data.pl.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Lang\lang-data.ru.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
