Added french translation for game data
- fixed some misprints
- fixed hero Torosar name with space
- fixed save bin data

--- a/Heroes3Editor/Heroes3Editor.csproj
+++ b/Heroes3Editor/Heroes3Editor.csproj
@@ -20,6 +20,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="Lang\lang-data.fr.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Lang\lang-data.pl.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
