Fixed heroes searching
- separate heroes HotA and unique campaign heroes
- add new settings "Use unique heroes names" in search
- fix search hero in russian
- add Recent Files feature

--- a/Heroes3Editor/App.config
+++ b/Heroes3Editor/App.config
@@ -13,6 +13,9 @@
             <setting name="UpdateGameLangWithAppLang" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="UseUniqueHeroes" serializeAs="String">
+                <value>False</value>
+            </setting>
         </Heroes3Editor.Properties.Settings>
     </userSettings>
 </configuration>
