--- a/Heroes3Editor/Properties/Settings.settings
+++ b/Heroes3Editor/Properties/Settings.settings
@@ -8,5 +8,11 @@
     <Setting Name="UpdateGameLangWithAppLang" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="RecentFiles" Type="System.Collections.Specialized.StringCollection" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="UseUniqueHeroes" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
